force-app/main/default/objects/Opportunity/fields/Landing_Pages_Required_PL_Trade_Body__c.field-meta.xml
<CustomField>
    <fullName>Landing_Pages_Required_PL_Trade_Body__c</fullName>
    <label>Landing Pages Required? (PL Trade Body)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>