force-app/main/default/objects/Opportunity/fields/Latest_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Latest_Attribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Attribution__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>