force-app/main/default/objects/Opportunity/fields/Leads_Since_Audit_Start__c.field-meta.xml
<CustomField>
    <fullName>Leads_Since_Audit_Start__c</fullName>
    <description>Number of leads since the audit started?</description>
    <label>Leads Since Audit Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>