force-app/main/default/objects/Opportunity/fields/Legislation_Training_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Legislation_Training_Booked_Date__c</fullName>
    <label>Legislation Training Booked Date</label>
    <type>Date</type>
</CustomField>