force-app/main/default/objects/Opportunity/fields/Level_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Level_of_interest__c</fullName>
    <description>The level of interest from the meeting.</description>
    <label>Level of interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Immediate Interest</fullName>
            </value>
            <value>
                <fullName>2 - Moderate interest</fullName>
            </value>
            <value>
                <fullName>3 - Not interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>