force-app/main/default/objects/Opportunity/fields/Levels_of_Insurance_Required_PI_Insuranc__c.field-meta.xml
<CustomField>
    <fullName>Levels_of_Insurance_Required_PI_Insuranc__c</fullName>
    <label>What levels of insurance are required?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>