force-app/main/default/objects/Opportunity/fields/Live_Number_of_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Live_Number_of_Contractors__c</fullName>
    <label>Live Number of Contractors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>