force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chase Exhausted</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Cannot insure</fullName>
            </value>
            <value>
                <fullName>Does not enforce insurance</fullName>
            </value>
            <value>
                <fullName>Not a priority</fullName>
            </value>
            <value>
                <fullName>All workers insured</fullName>
            </value>
            <value>
                <fullName>CEST</fullName>
            </value>
            <value>
                <fullName>Not enough Outside IR35</fullName>
            </value>
            <value>
                <fullName>Alternative provider</fullName>
            </value>
            <value>
                <fullName>Enforcing contractor</fullName>
            </value>
            <value>
                <fullName>Does not want to recommend</fullName>
            </value>
            <value>
                <fullName>No Outside IR35 workers</fullName>
            </value>
            <value>
                <fullName>Cannot insure members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>