force-app/main/default/objects/Opportunity/fields/Medical_Service_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Service_Guidance__c</fullName>
    <label>Medical Service Guidance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>