force-app/main/default/objects/Opportunity/fields/Meeting_Attended_Date_PI__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attended_Date_PI__c</fullName>
    <label>Meeting Attended Date</label>
    <type>Date</type>
</CustomField>