force-app/main/default/objects/Opportunity/fields/Meeting_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Follow_Up__c</fullName>
    <label>Meeting Follow-Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>