force-app/main/default/objects/Opportunity/fields/Member_Sectors__c.field-meta.xml
<CustomField>
    <fullName>Member_Sectors__c</fullName>
    <label>Member Sectors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>