force-app/main/default/objects/Opportunity/fields/Migration_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Migration_Last_Modified_By__c</fullName>
    <label>Migration_Last_Modified_By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>