force-app/main/default/objects/Opportunity/fields/Migration_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Migration_Modified_Date__c</fullName>
    <label>Migration_Modified_Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>