force-app/main/default/objects/Opportunity/fields/Migration_Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Migration_Old_Stage__c</fullName>
    <label>Migration Old Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>