force-app/main/default/objects/Opportunity/fields/Migration_Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Migration_Opp_Owner__c</fullName>
    <label>Migration_Opp_Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>