force-app/main/default/objects/Opportunity/fields/Minimum_Agreed__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Agreed__c</fullName>
    <label>Minimum Agreed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>