force-app/main/default/objects/Opportunity/fields/Minimum_contractor_number__c.field-meta.xml
<CustomField>
    <fullName>Minimum_contractor_number__c</fullName>
    <label>Minimum contractor number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>