force-app/main/default/objects/Opportunity/fields/Mitigate_Tax_Liability__c.field-meta.xml
<CustomField>
    <fullName>Mitigate_Tax_Liability__c</fullName>
    <label>Max Tax Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>