force-app/main/default/objects/Opportunity/fields/Modules_of_interest_Demo__c.field-meta.xml
<CustomField>
    <fullName>Modules_of_interest_Demo__c</fullName>
    <description>What modules are they interested in from the Demo?</description>
    <label>Modules of interest - Demo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IR35 Tool</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Right to Work</fullName>
            </value>
            <value>
                <fullName>Timesheets</fullName>
            </value>
            <value>
                <fullName>Document Signing</fullName>
            </value>
            <value>
                <fullName>CIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>