force-app/main/default/objects/Opportunity/fields/Monthly_Quote_Target__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Quote_Target__c</fullName>
    <description>What is their target volume of quotes per month?</description>
    <label>Monthly Quote Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>