force-app/main/default/objects/Opportunity/fields/Monthly_Worker_Volume__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Worker_Volume__c</fullName>
    <description>What is the Monthly Worker Volume?</description>
    <label>Monthly Worker Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>