force-app/main/default/objects/Opportunity/fields/MTA_Count__c.field-meta.xml
<CustomField>
    <fullName>MTA_Count__c</fullName>
    <description>MtaCount Instanda API Mapping Field</description>
    <label>MTA Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>