force-app/main/default/objects/Opportunity/fields/Nbr_of_Compliance_Onboarding_Staff__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Compliance_Onboarding_Staff__c</fullName>
    <description>How many compliance &amp; onboarding staff do they have?</description>
    <label>Nbr of Compliance &amp; Onboarding Staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>