force-app/main/default/objects/Opportunity/fields/New_Clients_Monthly__c.field-meta.xml
<CustomField>
    <fullName>New_Clients_Monthly__c</fullName>
    <description>How many new clients monthly?</description>
    <label>New Clients Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>