force-app/main/default/objects/Opportunity/fields/New_Clients_Renewal_Date_Capture_Process__c.field-meta.xml
<CustomField>
    <fullName>New_Clients_Renewal_Date_Capture_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Clients Renewal Date Capture Process</label>
    <type>Checkbox</type>
</CustomField>