force-app/main/default/objects/Opportunity/fields/New_Members_Monthly__c.field-meta.xml
<CustomField>
    <fullName>New_Members_Monthly__c</fullName>
    <label>New Members Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>