force-app/main/default/objects/Opportunity/fields/Next_Getting_Agreement_Signed_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Getting_Agreement_Signed_Reminder__c</fullName>
    <description>Use to determine when a Reminder should be sent out to Account Owner once the checkbox Sending Agreement has been ticked.</description>
    <label>Next Getting Agreement Signed Reminder</label>
    <type>Date</type>
</CustomField>