force-app/main/default/objects/Opportunity/fields/Next_OPP_Sale_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_OPP_Sale_Reminder__c</fullName>
    <description>Use to determine when a Reminder should be sent out to Account Owner once the checkbox Post Implementing OPP has been ticked.</description>
    <label>Next OPP Sale Reminder</label>
    <type>Date</type>
</CustomField>