force-app/main/default/objects/Opportunity/fields/Next_OPP_Sale_Reminder_is_today__c.field-meta.xml
<CustomField>
    <fullName>Next_OPP_Sale_Reminder_is_today__c</fullName>
    <description>Used as a criteria of Opportunity: Scheduled - OPP Approval Reminder flow.</description>
    <formula>Next_OPP_Sale_Reminder__c = Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next OPP Sale Reminder is today</label>
    <type>Checkbox</type>
</CustomField>