force-app/main/default/objects/Opportunity/fields/Next_PL_Actions__c.field-meta.xml
<CustomField>
    <fullName>Next_PL_Actions__c</fullName>
    <description>Next actions for PL Insurance awareness within existing membership?</description>
    <label>Next PL Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>