force-app/main/default/objects/Opportunity/fields/Next_Sending_Agreement_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Next_Sending_Agreement_Reminder__c</fullName>
    <description>Use to determine when a Reminder should be sent out to Account Owner once the checkbox Sending Quote/Proposal has been ticked.</description>
    <label>Next Sending Agreement Reminder</label>
    <type>Date</type>
</CustomField>