force-app/main/default/objects/Opportunity/fields/Next_Sending_Agreement_Reminder_Today__c.field-meta.xml
<CustomField>
    <fullName>Next_Sending_Agreement_Reminder_Today__c</fullName>
    <description>Used as criteria of Opportunity: Scheduled - IR35 Tool Approval Reminder</description>
    <formula>Next_Sending_Agreement_Reminder__c = today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Sending Agreement Reminder Today</label>
    <type>Checkbox</type>
</CustomField>