force-app/main/default/objects/Opportunity/fields/Non_standard_terms__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_terms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non standard terms</label>
    <type>Checkbox</type>
</CustomField>