force-app/main/default/objects/Opportunity/fields/Number_Of_Fee_Earning_Staff__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Fee_Earning_Staff__c</fullName>
    <label>Number Of Fee Earning Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>