force-app/main/default/objects/Opportunity/fields/Number_of_IR35_Protect_Insurance_Product__c.field-meta.xml
<CustomField>
    <fullName>Number_of_IR35_Protect_Insurance_Product__c</fullName>
    <label>Number of IR35 Protect Insurance Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>