force-app/main/default/objects/Opportunity/fields/Number_of_IR_35_Health_Check_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_IR_35_Health_Check_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of IR35 Health Check Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>