force-app/main/default/objects/Opportunity/fields/Number_Of_Non_Family_Admin__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Non_Family_Admin__c</fullName>
    <label>Number Of Non Family Admin</label>
    <length>1</length>
    <type>Text</type>
</CustomField>