force-app/main/default/objects/Opportunity/fields/Number_of_Off_Payroll_Protect_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Off_Payroll_Protect_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Off Payroll Protect Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>