force-app/main/default/objects/Opportunity/fields/Number_of_PI_Insurance_Audit_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PI_Insurance_Audit_Products__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of PI Insurance Audit Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>