force-app/main/default/objects/Opportunity/fields/Number_of_PL_Affinity_Process_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_PL_Affinity_Process_Products__c</fullName>
    <label>Number of PL Affinity Process Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>