force-app/main/default/objects/Opportunity/fields/Number_of_SMEs_Sole_Traders__c.field-meta.xml
<CustomField>
    <fullName>Number_of_SMEs_Sole_Traders__c</fullName>
    <label>Number of SMEs &amp; Sole Traders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>