force-app/main/default/objects/Opportunity/fields/Number_of_UK_Ltds__c.field-meta.xml
<CustomField>
    <fullName>Number_of_UK_Ltds__c</fullName>
    <label>Number of UK Ltds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>