force-app/main/default/objects/Opportunity/fields/Occupation_1__c.field-meta.xml
<CustomField>
    <fullName>Occupation_1__c</fullName>
    <label>Occupation 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>