force-app/main/default/objects/Opportunity/fields/Occupation_2__c.field-meta.xml
<CustomField>
    <fullName>Occupation_2__c</fullName>
    <label>Occupation 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>