force-app/main/default/objects/Opportunity/fields/Occupation_Height_Work__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Height_Work__c</fullName>
    <label>Occupation - Height Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>