force-app/main/default/objects/Opportunity/fields/Occupation_Manual_Work__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Manual_Work__c</fullName>
    <label>Occupation - Manual Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>