force-app/main/default/objects/Opportunity/fields/Off_Payroll_Protect_Check__c.field-meta.xml
<CustomField>
    <fullName>Off_Payroll_Protect_Check__c</fullName>
    <formula>IF( INCLUDES( Product_Type__c , &quot;Off Payroll Protect&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Payroll Protect Check</label>
    <type>Checkbox</type>
</CustomField>