force-app/main/default/objects/Opportunity/fields/Off_Payroll_Protect_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Off_Payroll_Protect_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Off Payroll Protect Confirmed</label>
    <type>Checkbox</type>
</CustomField>