force-app/main/default/objects/Opportunity/fields/Off_Payroll_Protect_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Off_Payroll_Protect_Product_Type__c</fullName>
    <formula>INCLUDES(Product_Type__c, &quot;Off Payroll Protect&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Off Payroll Protect Product Type</label>
    <type>Checkbox</type>
</CustomField>