force-app/main/default/objects/Opportunity/fields/Office_Locations__c.field-meta.xml
<CustomField>
    <fullName>Office_Locations__c</fullName>
    <description>Enter all the Branch Addresses.</description>
    <label>Office Locations</label>
    <type>TextArea</type>
</CustomField>