force-app/main/default/objects/Opportunity/fields/Ongoing_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Approval_Process__c</fullName>
    <description>This field is used to determine whether this record is currently in an ongoing, parallel approval process</description>
    <label>Ongoing Approval Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>