force-app/main/default/objects/Opportunity/fields/OPP_Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_Cancelation_Date__c</fullName>
    <label>OPP Cancelation Date</label>
    <type>Date</type>
</CustomField>