force-app/main/default/objects/Opportunity/fields/OPP_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_Confirmed_Date__c</fullName>
    <label>OPP Confirmed Date</label>
    <type>Date</type>
</CustomField>