force-app/main/default/objects/Opportunity/fields/OPP_Explainer_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>OPP_Explainer_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP Explainer Email Sent</label>
    <type>Checkbox</type>
</CustomField>