force-app/main/default/objects/Opportunity/fields/OPP_Implementation_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_Implementation_Booked_Date__c</fullName>
    <label>OPP Implementation Booked Date</label>
    <type>Date</type>
</CustomField>