force-app/main/default/objects/Opportunity/fields/OPP_Implementation_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>OPP_Implementation_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used the hide / display the button on an OPP Partner Opportunity that allows the user to create an OPP Implementation Case from the Opportunity</description>
    <label>OPP Implementation Case Created</label>
    <type>Checkbox</type>
</CustomField>