force-app/main/default/objects/Opportunity/fields/OPP_Interest__c.field-meta.xml
<CustomField>
    <fullName>OPP_Interest__c</fullName>
    <label>OPP Interest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>