force-app/main/default/objects/Opportunity/fields/OPP_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>OPP_Owner_Name__c</fullName>
    <description>Formula returning the Opportunity Owner First Name and Last Name in Text format, allowing it to be referenced on related Case records and used for filtering Case list views by related Opportunity Owner.</description>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPP Owner Name</label>
    <type>Text</type>
</CustomField>