force-app/main/default/objects/Opportunity/fields/OPP_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>OPP_Renewal_Date__c</fullName>
    <label>OPP Renewal Date</label>
    <type>Date</type>
</CustomField>