force-app/main/default/objects/Opportunity/fields/OPP_Requirement__c.field-meta.xml
<CustomField>
    <fullName>OPP_Requirement__c</fullName>
    <label>OPP Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>