force-app/main/default/objects/Opportunity/fields/OPP_Sale_completed__c.field-meta.xml
<CustomField>
    <fullName>OPP_Sale_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPP Sale completed</label>
    <type>Checkbox</type>
</CustomField>