force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Field used for Round Robin assignment via Opportunity Round Robins custom metadata settings</description>
    <displayFormat>{0}</displayFormat>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>