force-app/main/default/objects/Opportunity/fields/Opportunity_Products_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products_Pardot__c</fullName>
    <description>Field created to pass the Quote Line Item Name into the related Opportunity upon syncing the Quote (Done via flow &apos;	Quote: Create &amp; Update&apos;). Used by Marketing.</description>
    <label>Opportunity Products Pardot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>