force-app/main/default/objects/Opportunity/fields/Opportunity_Unique_ID_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Unique_ID_Legacy__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Opportunity Unique ID (Legacy)</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>