force-app/main/default/objects/Opportunity/fields/Other_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Agreement_Type__c</fullName>
    <label>Other Agreement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>