force-app/main/default/objects/Opportunity/fields/Other_Provider__c.field-meta.xml
<CustomField>
    <fullName>Other_Provider__c</fullName>
    <label>Other Provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>