force-app/main/default/objects/Opportunity/fields/Outsourced_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_Service_Provider__c</fullName>
    <label>Outsourced Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>