force-app/main/default/objects/Opportunity/fields/Paragraph_insert_wording__c.field-meta.xml
<CustomField>
    <fullName>Paragraph_insert_wording__c</fullName>
    <label>Paragraph insert wording</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>