force-app/main/default/objects/Opportunity/fields/Paragraph_Landing_Page_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Paragraph_Landing_Page_Implemented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paragraph/Landing Page Implemented</label>
    <type>Checkbox</type>
</CustomField>