force-app/main/default/objects/Opportunity/fields/Paragraph_wording__c.field-meta.xml
<CustomField>
    <fullName>Paragraph_wording__c</fullName>
    <label>Paragraph wording</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>